--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,7 @@ pipeline:
   build:
     image: node:latest
     commands: npm install
+    commands: npm run build
   test:
     image: node:latest
     commands: npm run lint
