--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,9 @@
 pipeline:
   build:
     image: node:latest
-    commands: npm install
-    commands: npm run build
+    commands:
+      - npm install
+      - npm run build
   test:
     image: node:latest
     commands: npm run lint
