modify run build command

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,9 +1,14 @@
-pipeline:
-  build:
-    image: node:latest
-    commands:
-      - npm install
-      - npm run build
-  test:
-    image: node:latest
-    commands: npm run lint
+kind: pipeline
+name: default
+
+steps:
+- name: Node install
+  image: node:12
+  commands:
+  - npm install
+- name: Lint project
+  commands:
+  - npm run lint
+- name: Build project
+  commands:
+  - npm run build
